@@ -1,7 +1,7 @@
 all: main
 
-main: main.o dungeonManager.o heap.o gradientMap.o
-	gcc main.o dungeonManager.o heap.o gradientMap.o -o main -lm
+main: main.o dungeonManager.o heap.o gradientMap.o gameLoop.o
+	gcc main.o dungeonManager.o heap.o gradientMap.o gameLoop.o -o main -lm
 
 main.o: main.c dungeonManager.h
 	gcc -c -Wall -Werror -g main.c -o main.o -lm
@@ -14,6 +14,9 @@ heap.o: heap.c heap.h
 
 gradientMap.o: gradientMap.c gradientMap.h
 	gcc -c -Wall -Werror -g gradientMap.c -o gradientMap.o -lm
+
+gameLoop.o: gameLoop.c gameLoop.h
+	gcc -c -Wall -Werror -g gameLoop.c -o gameLoop.o -lm
 
 clean:
 	rm -f main *~ *.o
