@@ -1,0 +1,8 @@
+#ifndef GAMELOOP_H
+# define GAMELOOP_H
+
+void startGameLoop();
+void gameLoop();
+void pcMove();
+
+#endif
