@@ -9,6 +9,7 @@
 
 #include "dungeonManager.h" // Generate, save, load
 #include "gradientMap.h"
+#include "gameLoop.h"
 #include "colors.h"
 
 struct dungeon dungeon = {};
@@ -24,18 +25,18 @@ int main(int argc, char *argv[])
     int i = 0;
     for (i = 1; i < argc; i++)
     {
-      if (strcmp(argv[i], "--save") == 0)
-      {
-	save = true;
-      }
-      else if (strcmp(argv[i], "--load") == 0)
+      if (strcmp(argv[i], "--load") == 0)
       {
 	load = true;
+      }
+      else if (strcmp(argv[i], "--save") == 0)
+      {
+	save = true;
       }
       else if (strcmp(argv[i], "--nummon") == 0 && 
 	       (dungeon.numMonsters = atoi(argv[i + 1])))
       {
-	//
+	printf("NumMonsters: %d\n", dungeon.numMonsters);
       }
     } 
   }
@@ -46,13 +47,13 @@ int main(int argc, char *argv[])
   }
 
   // Set dungeon values to default
-  dungeon = (struct dungeon){};
   initializeDungeon();
 
   // If Load, call load
   if (load)
   {
     loadDungeon();
+    printf("Dungeon Loaded.\n");
   }
   else
   {
@@ -60,20 +61,21 @@ int main(int argc, char *argv[])
     generatePaths();
   }
 
+  generateMonsters();
+
   // Generate distance maps (tunnel & non-tunnel)
   genMapNoTunnel(&dungeon);
   genMapTunnel(&dungeon);
 
-  printf(C_PURPLE "~\t\t" C_CYAN "    *~*~*~*~*~{ Alban The Sorcerer }~*~*~*~*~*\n" C_RESET);
-
-  displayDungeon();
-
-  printf(C_PURPLE "~\n~\n" C_RESET);
-
   if (save)
   {
     saveDungeon();
+    printf("Dungeon Saved.\n");
   }
+
+  displayDungeon();
+
+  startGameLoop();
 
   return 0;
 }
